corrections to SVM

--- a/Classificação/classificacao.ipynb
+++ b/Classificação/classificacao.ipynb
@@ -913,7 +913,11 @@
     "- $C$ é pequeno\n",
     "O termo $\\lambda\\sum_{j=1}^p \\beta_j^2$ corresponde ao termo de penalização ridge. \n",
     "\n",
-    "Um ponto interessante é que no caso do SVC, a função de custo é exatamente zero para observações que estão do lado correto da margem. Já na regressão logística, esse valor não é exatamente zero, mas é bastante pequeno."
+    "Um ponto interessante é que no caso do SVC, a função de custo é exatamente zero para observações que estão do lado correto da margem. Já na regressão logística, esse valor não é exatamente zero, mas é bastante pequeno.\n",
+    "\n",
+    "Comparando-se as funções de custo, o SVM utiliza uma função _hinge loss_ (é **zero** para os exemplos que não são support vectors). Ao contrario, na regressão logística não é exatamente zero:\n",
+    "\n",
+    "![hinge_loss_log_loss](img/hinge_loss_log_loss.png)"
    ]
   }
  ],
@@ -933,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
