added improvement to Out of time validation

--- a/Avaliação/avaliacao_modelos.ipynb
+++ b/Avaliação/avaliacao_modelos.ipynb
@@ -330,7 +330,15 @@
     "- A habilidade de fazer previsões out-of-time não é levada em conta quando o modelo é construído (o modelo selecionado é aquele que tem uma boa performance nos dados de validação in-time)\n",
     "\n",
     "Na figura abaixo, temos um exemplo de validação in-time e teste out-of-time:\n",
-    "![out_of_time](img/out_of_time.png)"
+    "![out_of_time](img/out_of_time.png)\n",
+    "\n",
+    "Melhoria:\n",
+    "\n",
+    "Essa divisão no tempo entre treino e teste pode ocasionar muitos erros no modelo **se as distribuições entre os intervalos distintos (2015-2017 e 2018) forem diferentes.**\n",
+    "\n",
+    "Uma ideia seria, por exemplo, adicionar 10% do dataset de 2018 (imagem acima) ao dataset de treino, de modo que o modelo tenha conhecimento de alguns exemplos do dataset de teste (alvo).\n",
+    "\n",
+    "Assim, o modelo pode aprender _low level features_ do dataset de 2015-2017, que podem ser comuns entre todos os anos, e ao mesmo tempo \"mirar\" no dataset de 2018, que é o dataset que desejamos que ele tenha um bom desempenho."
    ]
   },
   {
@@ -486,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
