corrections to the text

--- a/Avaliação/avaliacao_modelos.ipynb
+++ b/Avaliação/avaliacao_modelos.ipynb
@@ -334,11 +334,11 @@
     "\n",
     "Melhoria:\n",
     "\n",
-    "Essa divisão no tempo entre treino e teste pode ocasionar muitos erros no modelo **se as distribuições entre os intervalos distintos (2015-2017 e 2018) forem diferentes.**\n",
+    "Essa divisão no tempo entre treino e teste pode ocasionar muitos erros decpr **se as distribuições entre os intervalos distintos (2015-2017 e 2018) forem diferentes.**\n",
     "\n",
     "Uma ideia seria, por exemplo, adicionar 10% do dataset de 2018 (imagem acima) ao dataset de treino, de modo que o modelo tenha conhecimento de alguns exemplos do dataset de teste (alvo).\n",
     "\n",
-    "Assim, o modelo pode aprender _low level features_ do dataset de 2015-2017, que podem ser comuns entre todos os anos, e ao mesmo tempo \"mirar\" no dataset de 2018, que é o dataset que desejamos que ele tenha um bom desempenho."
+    "Assim, o modelo pode aprender _low level features_ do dataset de 2015-2017, que podem ser comuns entre todos os anos, e ao mesmo tempo \"mirar\" no dataset de 2018, que é o dataset em que desejamos que ele tenha um bom desempenho."
    ]
   },
   {
