added meeting content - hierarchical clustering

--- a/Agrupamento/agrupamento.ipynb
+++ b/Agrupamento/agrupamento.ipynb
@@ -159,9 +159,9 @@
    "metadata": {},
    "source": [
     "## 3. Algoritmos Hierárquicos\n",
-    "\n",
     "- Não exige que o número de clusters $k$ seja pré-especificado\n",
     "- Resulta em uma representação em forma de árvore, chamada **dendograma**\n",
+    "- Hard clustering\n",
     "\n",
     "![partitional_vs_hierarchical](img/partitional_vs_hierarchical.png)\n",
     "\n",
@@ -174,11 +174,11 @@
     "    - For text: Hamming distance, Cosine distance, Levenshtein distance\n",
     "- também definimos um **critério de linkage** entre dois clusters (baseia-se na função distância):\n",
     "    - Maximum or complete-linkage clustering\n",
-    "- Minimum or single-linkage clustering\n",
-    "- Unweighted average linkage clustering (or UPGMA)\n",
-    "- Weighted average linkage clustering (or WPGMA)\n",
-    "- Centroid linkage clustering, or UPGMC\n",
-    "- Minimum energy clustering"
+    "    - Minimum or single-linkage clustering\n",
+    "    - Unweighted average linkage clustering (or UPGMA)\n",
+    "    - Weighted average linkage clustering (or WPGMA)\n",
+    "    - Centroid linkage clustering, or UPGMC\n",
+    "    - Minimum energy clustering"
    ]
   },
   {
@@ -192,9 +192,13 @@
     "Nos métodos **aglomerativos** (também chamados de “bottom up”), cada observação começa dentro de seu próprio cluster, e **pares de clusters são combinados em um só** a medida em que subimos na hierarquia.\n",
     "\n",
     "Algoritmo:\n",
-    "1. Definir uma métrica de dissimilaridade entre cada par de observações (geralmente usa-se distância euclidiana)\n",
+    "1. Definir uma métrica de dissimilaridade entre cada par de observações (geralmente usa-se distância euclidiana). Definir em seguida o critério de linkage entre clusters.\n",
     "2. Começando da base do dendograma, cada uma das $n$ observações é tratada como sendo seu próprio cluster.\n",
     "3. Os dois clusters mais similares entre eles são combinados em um só, e o processo é repetido até que todas as observações pertençam a um único cluster.\n",
+    "\n",
+    "O dendograma:\n",
+    "- Eixo x: números das observações\n",
+    "- Eixo y: distância entre os clusters\n",
     "\n",
     "OBS:\n",
     "- Podemos extrair informações sobre a similaridade de duas observações baseado na localização no **eixo vertical** onde os ramos da árvore contendo essas duas observações se unem pela primeira vez.\n",
@@ -204,7 +208,9 @@
     "Notar que como o que importa é a posição vertical do elemento no dendograma, o elemento 6 está tão próximo de 4, quanto de 5, quanto de qualquer outro desse cluster (a distância horizontal no dendograma não importa!).\n",
     "\n",
     "#### Divisivos\n",
-    "Nos métodos **divisivos** (“top down”), todas as observações começam em um cluster, e são realizadas **divisões recursivas** à medida em que descemos na hierarquia."
+    "Nos métodos **divisivos** (“top down”), todas as observações começam em um cluster, e são realizadas **divisões recursivas** à medida em que descemos na hierarquia.\n",
+    "\n",
+    "![hierarchical_top_down](img/hierarchical_top_down.png)"
    ]
   },
   {
@@ -218,14 +224,32 @@
     "- Define a proximidade de clusters como sendo a **proximidade entre os pontos mais próximos** de cada cluster.\n",
     "- “Minimal intercluster dissimilarity”\n",
     "- Pode resultar em clusters longos e finos nos quais elementos próximos do mesmo cluster têm pequenas distâncias, mas elementos em extremidades opostas de um cluster podem estar muito mais distantes um do outro do que dois elementos de outros cluster.\n",
+    "- Chamamos de “single”, porque só pegamos o par de pontos mais próximos.\n",
     "\n",
     "![single_link](img/single_link.png)\n",
+    "\n",
+    "Vantagem: separa bem clusters de forma não elíptica **contanto que o gap entre dois clusters são seja pequeno**.\n",
+    "\n",
+    "![single_link_advantage](img/single_link_advantage.png)\n",
+    "\n",
+    "Desvantagem: Resultados não muito bons quando existe ruído entre os clusters.\n",
+    "\n",
+    "![single_link_drawback](img/single_link_drawback.png)\n",
     "\n",
     "#### Complete link (MAX)\n",
     "- Define a proximidade de clusters como sendo a **proximidade entre os pontos mais distantes** de cada cluster.\n",
     "- “Maximal intercluster dissimilarity”\n",
+    "- Chamamos de “complete”, pois precisamos passar por todos os pontos para determinar a maior distância.\n",
     "\n",
     "![complete_link](img/complete_link.png)\n",
+    "\n",
+    "Vantagem: Separa bem os clusters mesmo se houver ruído entre eles.\n",
+    "\n",
+    "![complete_link_advantage](img/complete_link_advantage.png)\n",
+    "\n",
+    "Desvantagem: por definição, acaba sendo enviesado para clusters globulares. Além disso, pode acabar quebrando clusters grandes.\n",
+    "\n",
+    "![complete_link_drawback](img/complete_link_drawback.png)\n",
     "\n",
     "#### Average\n",
     "- Define a proximidade de clusters como sendo a **média de proximidade entre duplas de pontos** de cada cluster.\n",
@@ -240,7 +264,21 @@
     "\n",
     "- Não é monotônica, ou seja, a similaridade pode **aumentar** depois de um passo, podendo resultar em **inversões**, conforme a figura abaixo:\n",
     "\n",
-    "![dendogram_inversions](img/dendogram_inversions.png)"
+    "![dendogram_inversions](img/dendogram_inversions.png)\n",
+    "\n",
+    "#### Ward\n",
+    "- Define a proximidade de clusters calculando a **soma das distâncias ao quadrado**\n",
+    "\n",
+    "$sim(C_1, C_2) = \\frac{\\sum d(P_i, P_j)^2}{|C_1|*|C_2|}$\n",
+    "- Vantagem: O método de ward consegue separar bem clusters mesmo que haja ruído entre eles.\n",
+    "- Desvantagem: É mais apropriado para clusters globulares.\n",
+    "\n",
+    "#### Linkage method e relação com outliers\n",
+    "Usando **Single link**, as distâncias no dendograma ficam menores, pois definimos os clusters que vamos juntar pelos pontos mais próximos.\n",
+    "\n",
+    "Como na clusterização hierárquica todos os pontos vão fazer parte de um cluster (nem que o próprio exemplo seja um cluster), se fizer **Single link**, o cluster ao qual atribuímos o outlier tem mais chances de continuar com o outlier depois do corte.\n",
+    "\n",
+    "Já se utilizarmos **Complete link**, a distância do cluster ao outlier será maior, e a chance de que cortemos o outlier em um cluster unitário (somente com o outlier) será maior."
    ]
   },
   {
@@ -435,7 +473,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
