--- a/Classificação/classificacao.ipynb
+++ b/Classificação/classificacao.ipynb
@@ -42,6 +42,7 @@
     "![sigmoide](img/sigmoide.png)\n",
     "\n",
     "$g(z) \\geq 0.5 \\implies z \\geq 0$\n",
+    "\n",
     "$g(z) \\leq 0.5 \\implies z \\leq 0$\n",
     "\n",
     "O g(z) é a \"probabilidade de prevermos 1 (a classe positiva). Ou seja, $h_{\\theta}(x) = p(y = 1;x)$.\n",
@@ -69,7 +70,11 @@
     "\n",
     "Quando y=1, queremos penalizar predições próximas de 0\n",
     "\n",
-    "Quando y=0, queremos penalizar predições próximas de 1"
+    "Quando y=0, queremos penalizar predições próximas de 1\n",
+    "\n",
+    "OBS: Notar que a função de custo é sempre maior ou igual a zero.\n",
+    "\n",
+    "OBS2: Mesmo com a regularização, a função de custo continua sendo convexa (e portanto o gradient descent continuará a convergir em direção ao mínimo global)."
    ]
   },
   {
@@ -103,7 +108,7 @@
     "\n",
     "$ln\\frac{p(1|X)}{1 - p(1|X)} = b_0 + b_1x_1 + ... + b_jx_j$\n",
     "\n",
-    "Aumentar X de uma unidade altera as log odds de $\\beta_1$, ou seja, multiplica as odds por $e^{-\\beta_1$.\n",
+    "Aumentar X de uma unidade altera as log odds de $\\beta_1$, ou seja, multiplica as odds por $e^{-\\beta_1}$.\n",
     "\n",
     "A quantidade que p(x) muda por conta de uma mudança de uma unidade em X depende do valor atual de X.\n",
     "\n",
@@ -134,7 +139,9 @@
     "\n",
     "A função de custo é atualizada da seguinte forma:\n",
     "\n",
-    "FALTA UMA IMAGEM AQUI\n",
+    "$cost(h_{\\theta}(x), y) = \\sum_{i=1}^n[-y^{(i)}log(h_{\\theta}(x^{(i)})) - (1-y^{(i)})log(1 - h_{\\theta}(x^{(i)}))] + \\frac{\\lambda}{2} \\sum_{j=1}^m \\theta_j^2$\n",
+    "\n",
+    "OBS: usar um training rate muito alto pode levar a problemas de underfitting\n",
     "\n",
     "#### Classificação multiclasse\n",
     "Problemas em que y pode assumir mais de dois valores\n",
@@ -166,7 +173,7 @@
     "- Cada par de features é **independente** (o que raramente é válido...)\n",
     "\n",
     "Modelo da probabilidade de y, dado um dataset X:\n",
-    "$P(y|X) = \\frac{P(X|y)P(y)}{P(X)}\n",
+    "$P(y|X) = \\frac{P(X|y)P(y)}{P(X)}$\n",
     "\n",
     "Como assumimos que as features são independentes, temos que $P(x_i,x_j) = P(x_i)P(x_j)$. Portanto:\n",
     "\n",
@@ -178,7 +185,7 @@
     "\n",
     "O classificador pode ser escrito como:\n",
     "\n",
-    "$\\hat{y} = argmax_{k \\in {1,...,K}} p(C_k)\\prod_{i=1}^n p(x_i|C_k)$\n",
+    "$\\hat{y} = \\text{argmax}_{k \\in {1,...,K}} p(C_k)\\prod_{i=1}^n p(x_i|C_k)$\n",
     "\n",
     "O valor calculado é **proporcional às probabilidades** (Nosso dataset pode não ser representativo)\n",
     "\n",
@@ -194,11 +201,12 @@
     "| Não-Spam | 5 | 10 | 0 |\n",
     "\n",
     "Se um email tem as palavras Buy e Cheap, é spam ou não spam?\n",
-    "P(S|\"Buy\"+\"Cheap) P(S) P(\"Buy\"|S) P[\"Cheap\"|S) = 25/100 * 20/25 * 15/25 = 0.12\n",
     "\n",
-    "P(NS|\"Buy\"+\"Cheap) P(NS) * P(\"Buy\"| NS) P(\"Cheap\" |NS) = 75/100 * 5/75 * 10/75 = 0.0067\n",
+    "$P(S|\\text{\"Buy\"+\"Cheap\"}) \\propto P(S)*P(\\text{\"Buy\"}|S)*P(\\text{\"Cheap\"}|S) = 25/100 * 20/25 * 15/25 = 0.12$\n",
     "\n",
-    "Como P(S|\"Buy\"+\"Cheap) > P(NS|\"Buy\"+\"Cheap) -> é spam\n",
+    "$P(NS|\\text{\"Buy\"+\"Cheap\"}) \\propto P(NS)*P(\\text{\"Buy\"}|NS)*P\\text{\"Cheap\"} |NS) = 75/100 * 5/75 * 10/75 = 0.0067$\n",
+    "\n",
+    "Como $P(S|\\text{\"Buy\"+\"Cheap\"}) > P(NS|\\text{\"Buy\"+\"Cheap\"})$ -> é spam\n",
     "\n",
     "Ex:\n",
     "\n",
@@ -252,7 +260,7 @@
     "- Não deveria funcionar, pois as vars devem ter uma correlação (parece uma hipótese\n",
     "fraca), mas na prática, empiricamente, vemos que o algoritmo funciona bem!\n",
     "    - O Naive Baves raramente consegue estimar bem a probabilidade correta das classes, mas isso não costuma ser necessário para muitas aplicações. O importante é saber qual classe tem maior probabilidade, e isso ele consegue fazer relativamente bem.\n",
-    "- Zero frequency: valor de um $x_i$ (categórico) que não ocorre nunca no train, mas ocorre no teste, terá probabilidade estimada O pelo modelo.\n",
+    "- Zero frequency: valor de um $x_i$ (categórico) que não ocorre nunca no train, mas ocorre no teste, terá probabilidade estimada 0 pelo modelo.\n",
     "    - Alternativa: pode-se atribuir 1 no início para o count desses valores de $x_i$."
    ]
   },
@@ -328,7 +336,6 @@
    "metadata": {},
    "source": [
     "## 4. Árvores de Classificação\n",
-    "- Árvore de Classificação\n",
     "- Supervisionado\n",
     "- Não paramétrico\n",
     "- Não precisa de feature scaling\n",
@@ -357,7 +364,7 @@
     "Exemplos:\n",
     "- 1-(0.5^2-(0.5)^2 = 0.5\n",
     "- 1-(0.2)^2-(0.8)^2 = 0.32\n",
-    "- 1 - (0.05)^2 - 10.95)^2 = 0.095 (a folha tem muitos exemolos de uma classe, a divisão foi muito boa)\n",
+    "- 1 - (0.05)^2 - (0.95)^2 = 0.095 (a folha tem muitos exemplos de uma classe, a divisão foi muito boa)\n",
     "- 1-(1.0)^2-(0.0)^2 = 0 (divisão perfeita)\n",
     "\n",
     "### 4.2 Cross-Entropy\n",
@@ -382,7 +389,7 @@
     "\n",
     "4. Repetir o processo em cada Ramo\n",
     "\n",
-    "- Pre poda: gtde de exemplos max por folha, etc.\n",
+    "- Pre poda: quantidade de exemplos max por folha, etc.\n",
     "- Pós poda: constrói a árvore e vai cortando ramos."
    ]
   },
@@ -396,7 +403,7 @@
     "\n",
     "![ensemble_learning](img/ensemble_learning.png)\n",
     "\n",
-    "### 5.1 Bagging (é um método geral) - Boostrae AGgregation\n",
+    "### 5.1 Bagging (é um método geral) - Boostrap AGgregation\n",
     "Árvores são \"building blocks\".\n",
     "\n",
     "Treinamos B árvores de regressão, usando B bootstrapped training sets. Fazemos a média das predições das B árvores.\n",
@@ -937,7 +944,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
