--- a/Agrupamento/agrupamento.ipynb
+++ b/Agrupamento/agrupamento.ipynb
@@ -165,7 +165,7 @@
     "\n",
     "![partitional_vs_hierarchical](img/partitional_vs_hierarchical.png)\n",
     "\n",
-    "- é importante definir uma **função distância** (similaridade) entre dois pontos:\n",
+    "- É importante definir uma **função distância** (similaridade) entre dois pontos:\n",
     "    - Euclidian distance\n",
     "    - Squared Euclidian distance\n",
     "    - Manhattan distance\n",
@@ -213,6 +213,8 @@
    "source": [
     "### 3.2 Tipos de Linkage\n",
     "Mais usadas = average e complete\n",
+    "\n",
+    "https://towardsdatascience.com/understanding-the-concept-of-hierarchical-clustering-technique-c6e8243758ec\n",
     "\n",
     "#### Single link (MIN)\n",
     "- Define a proximidade de clusters como sendo a **proximidade entre os pontos mais próximos** de cada cluster.\n",
@@ -435,7 +437,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -488,7 +489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
