new image to SVM, new topic on PCA

--- a/DataPrep/data_prep.ipynb
+++ b/DataPrep/data_prep.ipynb
@@ -335,7 +335,10 @@
     "\n",
     "![pca_normalization](img/pca_normalization.png)\n",
     "\n",
-    "O mais recomendado é redimensionar cada variável de forma que todas tenham um **desvio padrão unitário**."
+    "O mais recomendado é redimensionar cada variável de forma que todas tenham um **desvio padrão unitário**.\n",
+    "\n",
+    "#### Visualização de dados\n",
+    "O método PCA também é util para a visualização de dados, pois permite reduzir os dados para dimensões representaveis visualmente (2D ou 3D). O unico problema, é que as features no novo espaço não têm um significado tão claro, visto que são combinações lineares das variaveis do problema no espaço original."
    ]
   },
   {
