--- a/Classificação/classificacao.ipynb
+++ b/Classificação/classificacao.ipynb
@@ -869,6 +869,8 @@
     "Por que kernels?\n",
     "- Reduz a quantidade de computação: só precisamos calcular o kernel para $\\binom{n}{2}$ pares distintos, devido às propriedades de **simetria** de um kernel function\n",
     "\t- também é conhecido como _Kernel Trick_: Na prática, as funções kernel apenas calculam as relações entre os pares de pontos **como se** eles estivessem em dimensões maiores, porém não realizam de fato essa transformação).\n",
+    "    \n",
+    "![kernel_trick](img/kernel_trick.png)\n",
     "\n",
     "#### Multiclasse\n",
     "\n",
@@ -944,7 +946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
