Adicionado SVM versao andrew

--- a/Classificação/classificacao.ipynb
+++ b/Classificação/classificacao.ipynb
@@ -868,7 +868,7 @@
     "\n",
     "Por que kernels?\n",
     "- Reduz a quantidade de computação: só precisamos calcular o kernel para $\\binom{n}{2}$ pares distintos, devido às propriedades de **simetria** de um kernel function\n",
-    "\t- também é conhecido como _Kernel Trick_: Na prática, as funções kernel apenas calculam as relações entre os pares de pontos **como se** eles estivessem em dimensões maiores, porém não realizam de fato essa transformação).\n",
+    "-  _Kernel Trick_: Na prática, as funções kernel apenas calculam as relações entre os pares de pontos **como se** eles estivessem em dimensões maiores, porém não realizam de fato essa transformação.\n",
     "    \n",
     "![kernel_trick](img/kernel_trick.png)\n",
     "\n",
@@ -928,6 +928,69 @@
     "\n",
     "![hinge_loss_log_loss](img/hinge_loss_log_loss.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.4 Uma outra formulação de SVM\n",
+    "https://www.seas.upenn.edu/~cis519/fall2017/lectures/07_SVMs.pdf\n",
+    "\n",
+    "#### Logistic Regression\n",
+    "\n",
+    "Custo da logistic regression: $-(ylog(h_{\\theta}(x)) + (1-y)log(1 -h_{\\theta}(x))) = -(ylog(\\frac{1}{1 + e^{-\\theta^Tx}}) + (1-y)log(1 -\\frac{1}{1 + e^{-\\theta^Tx}}))$\n",
+    "\n",
+    "Se $y = 1$, queremos que $h_{\\theta}(x) \\approx 1$, isto é, $\\theta^Tx >> 0$.\n",
+    "\n",
+    "Se $y = 0$, queremos que $h_{\\theta}(x) \\approx 0$, isto é, $\\theta^Tx << 0$.\n",
+    "\n",
+    "![cost_logistic_svm](img/cost_logistic_svm.png)\n",
+    "\n",
+    "As funções de custo em vermelho serão chamadas de $cost_1(z)$ e $cost_0(z)$, e serão utilizadas para definir o SVM.\n",
+    "\n",
+    "O problema da logistic regression pode ser escrito como:\n",
+    "\n",
+    "$\\text{min}_{\\theta} -\\frac{1}{m}\\sum_{i=1}^m[y_i log(h_{\\theta}(x_i)) + (1 - y_i) log(1 - h_{\\theta}(x_i))] + \\frac{\\lambda}{2m}\\sum_{j=1}^n\\theta_j^2$\n",
+    "\n",
+    "#### SVM\n",
+    "\n",
+    "O problema da SVM pode ser escrito como:\n",
+    "\n",
+    "$\\text{min}_{\\theta} C\\sum_{i=1}^m[y_i cost_1(\\theta^Tx_i) + (1 - y_i) cost_0(\\theta^Tx_i)] + \\frac{1}{2}\\sum_{j=1}^n\\theta_j^2$\n",
+    "\n",
+    "Predição:\n",
+    "\n",
+    "$h_{\\theta}(x) = 1$, se $\\theta^Tx \\geq 0$\n",
+    "\n",
+    "$h_{\\theta}(x) = 0$, se $\\theta^Tx < 0$\n",
+    "\n",
+    "Considerando as novas funções de custo:\n",
+    "\n",
+    "Se $y = 1$, queremos que $\\theta^Tx \\geq 1$ (para que o custo = 0).\n",
+    "\n",
+    "Se $y = 0$, queremos que $\\theta^Tx \\leq -1$ (para que o custo = 0).\n",
+    "\n",
+    "#### C\n",
+    "\n",
+    "$C$ possui um papel parecido com $\\frac{1}{\\lambda}$. Logo, se $C$ é grande, a variância é grande (overfit), e se $C$ é pequeno, a variância é pequena (underfit)\n",
+    "\n",
+    "#### Kernels\n",
+    "Dado $x$: $f_i$ = $exp(-\\frac{\\|x - l^{(i)}\\|^2}{2\\sigma^2})$\n",
+    "\n",
+    "Previsão: y = 1 se $\\theta_0 + \\theta_1f_1 + \\theta_2f_2 + \\theta_3f_3 \\geq 0$\n",
+    "\n",
+    "![svm_andrew_landmarks](img/svm_andrew_landmarks.png)\n",
+    "\n",
+    "$\\sigma^2$ é um amplificador da distância entre $x$ e $l^{(i)}$. Se $\\sigma^2$ é pequeno, apenas os $x$ mais próximos da landmark terão influência no ponto de previsão:\n",
+    "- $\\sigma^2$ grande: maior viés (general classifier)\n",
+    "- $\\sigma^2$ pequeno: maior variância (local classifier)\n",
+    "\n",
+    "Como escolher as **landmarks**?\n",
+    "\n",
+    "Dado $(x^{(1)}, y^{(1)}), ..., (x^{(m)}, y^{(m)})$, escolhemos $l^{(1)} = x^{(1)}, ..., l^{(m)} = x^{(m)}$\n",
+    "\n",
+    "OBS: Usar feature scaling antes de usar o Gaussian Kernel"
+   ]
   }
  ],
  "metadata": {
@@ -946,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
