--- a/DataPrep/data_prep.ipynb
+++ b/DataPrep/data_prep.ipynb
@@ -8,6 +8,31 @@
     "\n",
     "Data Preparation é o processo de limpeza e transformação de dados “brutos” antes de realizar análises e criar modelos. \n",
     "\n",
+    "Por que fazer preparação de dados?\n",
+    "- Atributos podem estar em **escalas diferentes**\n",
+    "    - Os métodos podem não convergir se não estiverem escalados\n",
+    "- **Outliers** podem estar presentes nos dados\n",
+    "- **Ruído** ´pode estar presente nos dados\n",
+    "- Dados podem estar contaminados, **incompletos** ou inconsistentes\n",
+    "\n",
+    "Atividades comuns:\n",
+    "- Análise exploratória\n",
+    "    - Gráficos\n",
+    "    - Estatísticas\n",
+    "        - Medidas de centralidade: média, mediana, moda\n",
+    "        - Medidas de dispersão: desvio padrão, variância, IQR\n",
+    "        \n",
+    "- Limpeza de dados\n",
+    "    - Missing values\n",
+    "    - Outliers\n",
+    "    - Ruído\n",
+    "- Integração\n",
+    "    - União de dados de bases diferentes\n",
+    "- Redução de dados\n",
+    "    - Seleção de atributos\n",
+    "- Discretização\n",
+    "    - Compactar a informação\n",
+    "\n",
     "## 1. Tratamento de Missings\n",
     "Muito comum na fase de EDA (Exploratory Data Analysis), precisamos tratar **dados faltantes** no dataset.\n",
     "\n",
@@ -23,12 +48,12 @@
     "    - Essa hipótese é mais geral e realista que o MCAR. Os métodos para lidar com missing data atuais normalmente partem da hipótese do MAR.\n",
     "\n",
     "- **Missing Completely at Random (MCAR):** A probabilidade de o dado ser faltante é a mesma em todos os casos, e não estão relacionadas aos dados em si.\n",
-    "- Exemplo: Estimar a renda bruta anual de uma residência em uma população, a partir de questionários. No caso do MCAR, a falta de dados é completamente aleatória, como se alguns questionários fossem perdidos.\n",
+    "    - Exemplo: Estimar a renda bruta anual de uma residência em uma população, a partir de questionários. No caso do MCAR, a falta de dados é completamente aleatória, como se alguns questionários fossem perdidos.\n",
     "\n",
     "- **Missing Not at Random (MNAR):** Os valores faltantes dependem de outras variáveis, e a probabilidade de os valores estarem faltando são desconhecidas. Em geral, são situações difíceis de reconhecer e tratar.\n",
-    "- Exemplo: Pessoas não querem revelar suas rendas, porque elas têm vergonha dela.\n",
-    "- Estratégias para achar dados sobre as causas de falta são: encontrar mais dados sobre as causas de falta, fazer análise what-if para ver como os dados respondem em vários cenários.\n",
-    "- Possibilidade de se escalar a coleta, produzirmos mais dados faltantes (já que depende de variáveis do problema).\n"
+    "    - Exemplo: Pessoas não querem revelar suas rendas, porque elas têm vergonha dela.\n",
+    "    - Estratégias para achar dados sobre as causas de falta são: encontrar mais dados sobre as causas de falta, fazer análise what-if para ver como os dados respondem em vários cenários.\n",
+    "    - Possibilidade de se escalar a coleta, produzirmos mais dados faltantes (já que depende de variáveis do problema).\n"
    ]
   },
   {
@@ -429,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
