correction to Agrupamento

--- a/Agrupamento/agrupamento.ipynb
+++ b/Agrupamento/agrupamento.ipynb
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Expectation Minimization\n",
+    "#### Expectation Maximization\n",
     "É um procedimento genérico para modelagem **probabilística de dados**.\n",
     "De modo geral, a aprendizagem de modelos  costuma ser feita utilizando técnicas de **estimação por máxima verossimilhança**, porém no caso de mixture models, achar a solução de maior verossimilhança diferenciando a log likelihood e igualando a 0 é analiticamente impossível.\n",
     "\n",
@@ -527,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
