--- a/Classificação/classificacao.ipynb
+++ b/Classificação/classificacao.ipynb
@@ -17,7 +17,7 @@
     "- Transações: **Fraude (1)** x Não fraude (0)\n",
     "- Crédito: adimplente (0) x **inadimplente (1)**\n",
     "\n",
-    "Por que não Regressão Linear?\n",
+    "Por que não Regressão Linear + threshold?\n",
     "- Predições > 1 ou < 0 não fazem sentido\n",
     "- Outliers podem afetar o preditor\n",
     "\n",
@@ -90,6 +90,8 @@
     "\n",
     "A derivada da função Log-Loss é proporcional à diferença entre a predição e o valor real (h(x)-y). Se a predição é boa, a diferença é pequena, e portanto a derivada é pequena (estamos nos aproximando do mínimo).\n",
     "\n",
+    "![\"feature_scaling\"](img/feature_scaling.png)\n",
+    "\n",
     "#### Decision Boundary\n",
     "$H_{\\theta}(x) \\geq 0.5 \\implies \\theta^Tx \\geq 0 \\implies predict : 1$\n",
     "\n",
@@ -141,7 +143,7 @@
     "\n",
     "$cost(h_{\\theta}(x), y) = \\sum_{i=1}^n[-y^{(i)}log(h_{\\theta}(x^{(i)})) - (1-y^{(i)})log(1 - h_{\\theta}(x^{(i)}))] + \\frac{\\lambda}{2} \\sum_{j=1}^m \\theta_j^2$\n",
     "\n",
-    "OBS: usar um training rate muito alto pode levar a problemas de underfitting\n",
+    "OBS: usar um regularization term muito alto pode levar a problemas de underfitting\n",
     "\n",
     "#### Classificação multiclasse\n",
     "Problemas em que y pode assumir mais de dois valores\n",
@@ -204,7 +206,7 @@
     "\n",
     "$P(S|\\text{\"Buy\"+\"Cheap\"}) \\propto P(S)*P(\\text{\"Buy\"}|S)*P(\\text{\"Cheap\"}|S) = 25/100 * 20/25 * 15/25 = 0.12$\n",
     "\n",
-    "$P(NS|\\text{\"Buy\"+\"Cheap\"}) \\propto P(NS)*P(\\text{\"Buy\"}|NS)*P\\text{\"Cheap\"} |NS) = 75/100 * 5/75 * 10/75 = 0.0067$\n",
+    "$P(NS|\\text{\"Buy\"+\"Cheap\"}) \\propto P(NS)*P(\\text{\"Buy\"}|NS)*P(\\text{\"Cheap\"} |NS) = 75/100 * 5/75 * 10/75 = 0.0067$\n",
     "\n",
     "Como $P(S|\\text{\"Buy\"+\"Cheap\"}) > P(NS|\\text{\"Buy\"+\"Cheap\"})$ -> é spam\n",
     "\n",
@@ -218,7 +220,7 @@
     "\n",
     "![outlook_temp](img/outlook_temp.png)\n",
     "\n",
-    "Pra cada valor de variável x1 e xj, estimamos $p(x_i|y_j)$, pra cada $i$ e $j$, construindo a tabela anterior, a partir das ocorrências das variáveis no dataset.\n",
+    "Pra cada valor de variável $x_i$ e $y_j$, estimamos $p(x_i|y_j)$, pra cada $i$ e $j$, construindo a tabela anterior, a partir das ocorrências das variáveis no dataset.\n",
     "\n",
     "Para estimarmos a probabilidade de irmos jogar golf dado que hoje está (X=(sol, calor)):\n",
     "\n",
@@ -242,7 +244,7 @@
     "\n",
     "Usado para Bag of Words: cada $x_i$ é a qtde de uma palavra no texto. Queremos estimar a probabilidade de o texto pertence a alguma classe $y_j$.\n",
     "\n",
-    "OBS: Bernouilli-caso particular do multinomial, onde as features são valores booleanos (binários).\n",
+    "OBS: Bernouilli ==> caso particular do multinomial, onde as features são valores booleanos (binários).\n",
     "\n",
     "### Gaussiano\n",
     "As variáveis preditoras são valores continuos, e **assumimos** que elas provêm de uma distribuição Gaussiana.\n",
@@ -273,8 +275,6 @@
     "- Não paramétrico\n",
     "- Preguiçoso → Funciona a partir do cálculo de distâncias (ao dar fit, ele carrega todos os dados na memória) → Se o dataset for mto grande ele vai demorar mais \n",
     "- Precisa de feature scaling (Normalizações)\n",
-    "\n",
-    "![\"feature_scaling\"](img/feature_scaling.png)\n",
     "\n",
     "- Curse of dimensionality\n",
     "    - Quando temos muitas dimensões (acima de 10~16), as distâncias entre pontos se tornam praticamente equidistantes.\n",
@@ -312,7 +312,7 @@
     "### 3.3 Lazy Algorithm\n",
     "- Não constroem descrições gerais e explícitas (função alvo) a partir dos exemplos de treinamento;\n",
     "- Generalização é adiada até o momento da classificação;\n",
-    "- Armazena-se uma base de exemplos instances) que é usada para realizar a classificação de uma nova query (exemplo não visto);\n",
+    "- Armazena-se uma base de exemplos (instances) que é usada para realizar a classificação de uma nova query (exemplo não visto);\n",
     "- Em muitos casos apresenta um alto custo computacional (por conta do cálculo de distâncias).\n",
     "\n",
     "### 3.4 Como lidar com atributos nominais?\n",
@@ -353,16 +353,16 @@
     "### 4.1 Gini\n",
     "(== impureza de uma região (falta de preponderância de uma classe na região))\n",
     "\n",
-    "Para cada classe,\n",
+    "Para cada região $m$,\n",
     "\n",
-    "$G = \\sum_{k=1}^K \\hat{p_{mk}}(1 - \\hat{p_{mk}})$\n",
+    "$G_m = \\sum_{k=1}^K \\hat{p_{mk}}(1 - \\hat{p_{mk}})$\n",
     "\n",
     "Outra forma de escrever\n",
     "\n",
-    "$G = 1 - \\sum_{k=1}^K \\hat{p_{mk}}^2$\n",
+    "$G_m = 1 - \\sum_{k=1}^K \\hat{p_{mk}}^2$\n",
     "\n",
     "Exemplos:\n",
-    "- 1-(0.5^2-(0.5)^2 = 0.5\n",
+    "- 1-(0.5)^2-(0.5)^2 = 0.5\n",
     "- 1-(0.2)^2-(0.8)^2 = 0.32\n",
     "- 1 - (0.05)^2 - (0.95)^2 = 0.095 (a folha tem muitos exemplos de uma classe, a divisão foi muito boa)\n",
     "- 1-(1.0)^2-(0.0)^2 = 0 (divisão perfeita)\n",
@@ -389,8 +389,8 @@
     "\n",
     "4. Repetir o processo em cada Ramo\n",
     "\n",
-    "- Pre poda: quantidade de exemplos max por folha, etc.\n",
-    "- Pós poda: constrói a árvore e vai cortando ramos."
+    "- Pré-poda: quantidade de exemplos max por folha, etc.\n",
+    "- Pós-poda: constrói a árvore e vai cortando ramos."
    ]
   },
   {
@@ -403,7 +403,7 @@
     "\n",
     "![ensemble_learning](img/ensemble_learning.png)\n",
     "\n",
-    "### 5.1 Bagging (é um método geral) - Boostrap AGgregation\n",
+    "### 5.1 Bagging (é um método geral) - Boostrap Aggregation\n",
     "Árvores são \"building blocks\".\n",
     "\n",
     "Treinamos B árvores de regressão, usando B bootstrapped training sets. Fazemos a média das predições das B árvores.\n",
@@ -439,11 +439,11 @@
     "\n",
     "\n",
     "#### Algoritmo\n",
-    "Considere que temos N exemplos de treinamento\n",
+    "Considere que temos $N$ exemplos de treinamento\n",
     "\n",
-    "Para cada uma das t iterações faça:\n",
+    "Para cada uma das $t$ iterações faça:\n",
     "\n",
-    "1. Amostrar N exemplos com reposição (bagging).\n",
+    "1. Amostrar $k$ exemplos com reposição (bagging).\n",
     "\n",
     "2. Induzir uma árvore repetindo recursivamente os seguintes passos em cada novo nó da árvore, até que o critério de parada seja satisfeito:\n",
     "\n",
@@ -454,7 +454,7 @@
     "    c. Criar dois nós filhos usando o ponto de corte do passo anterior.\n",
     "3. Armazenar a árvore obtida.\n",
     "\n",
-    "Para cada uma das t árvores classificação:\n",
+    "Para cada uma das $t$ árvores classificação:\n",
     "1. Predizer o rótulo de classe do exemplo do conjunto-alvo.\n",
     "\n",
     "2. Retornar a classe predita com maior frequência.\n",
@@ -561,7 +561,7 @@
     "    - NLP\n",
     "    - Audio\n",
     "    - Imagens\n",
-    "- Modelo antigo, cuja ideia só pôde ser implementada ~nos anos 2000 com o aumento da quantidade de dados e de processamento aumentaram.\n",
+    "- Modelo antigo, cuja ideia só pôde ser implementada aprox. nos anos 2000, quando o aumento da quantidade de dados e de processamento aumentaram.\n",
     "\n",
     "Discussão/Motivação: Simular o funcionamentos dos neurônios, mas na prática, não tem um funcionamento igual (não se conhece o cérebro completamente).\n",
     "\n",
@@ -1009,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
