--- a/Agrupamento/agrupamento.ipynb
+++ b/Agrupamento/agrupamento.ipynb
@@ -72,7 +72,7 @@
     "- Por usar distâncias na atribuição de pontos a clusters, é necessário **normalizar os dados** para que a noção de distância não seja afetada pela magnitude das features.\n",
     "- Curse of dimensionality: Se o número de features for grande, a noção de distância pode acabar se perdendo, e todos os pontos ficarem igualmente distantes.\n",
     "- O algoritmo K-means minimiza a seguinte função objetivo: $J = \\sum_{c=1}^k\\sum_{x_j \\in C_c} d(x_j, \\bar{x}_c)^2$, onde $\\bar{x}_c = \\frac{1}{|C_c|}\\sum_{x_j \\in C_c} x_j$. Minimizar $J$ significa **minimizar as variâncias intra-cluster**.\n",
-    "- K-means funciona bem se os clusters são (hiper)esféricos, bem separados, de volumes aproximadamente iguais e possuem quantidades de pontos semelhantes\n"
+    "- K-means funciona bem se os clusters são (hiper)esféricos, bem separados, de volumes aproximadamente iguais e possuem quantidades de pontos semelhantes.\n"
    ]
   },
   {
@@ -299,8 +299,11 @@
    "source": [
     "## 4. Estratégias de definição do número de clusters\n",
     "- Dependendo do domínio\n",
+    "\n",
     "A quantidade de clusters pode ser feita dependendo do domínio do problema. Se já conhecemos em quantos grupos queremos dividir, devemos utilizar esse valor. Muitas vezes é uma decisão de negócio.\n",
+    "\n",
     "- Elbow method\n",
+    "\n",
     "Se não temos ideia de quantos clusters deve ter o nosso resultado final, podemos utilizar o método do cotovelo.\n",
     "Esse método consiste em aplicar o algoritmo de clusterização várias vezes, modificando o valor de $K$ e calculando a métrica de erro relacionada. Tomamos o valor de $K$ a partir do qual não percebemos uma grande queda do erro:\n",
     "\n",
